# Solana-rbac

./: .gitattributes  .gitignore  Anchor.toml  Cargo.toml  README.md  SECURITY.md  package.json
admin/: .env  .env.development  index.html  package.json  tsconfig.json  vite.config.ts
admin/src/: App.tsx  main.tsx  types.ts
admin/src/components/: Modal.tsx  OrgStateBadge.tsx  StateMachineBar.tsx  TxToast.tsx  WalletButton.tsx
admin/src/lib/: bitmask.ts  constants.ts  pda.ts  program.ts
admin/src/pages/: Overview.tsx  Permissions.tsx  Roles.tsx  Users.tsx
cli/: package.json  tsconfig.json
cli/src/: demo.ts  index.ts  utils.ts
docs/: architecture.md
programs/rbac/: Cargo.toml
programs/rbac/src/: errors.rs  lib.rs  macros.rs  state.rs
programs/rbac/src/instructions/: add_child_role.rs  add_role_permission.rs  assign_role.rs  assign_user_permission.rs  begin_update.rs  cancel_update.rs  close_user_account.rs  commit_update.rs  create_permission.rs  create_resource.rs  create_role.rs  create_user_account.rs  delete_permission.rs  delete_resource.rs  delete_role.rs  finish_update.rs  has_permission.rs  has_role.rs  initialize_org.rs  mod.rs  process_recompute_batch.rs  recompute_role.rs  remove_child_role.rs  remove_role_permission.rs  revoke_role.rs  revoke_user_permission.rs  transfer_super_admin.rs  update_manage_roles_permission.rs
tests/: rbac.ts  security-and-edge.ts
